--- a/examples/PENCIL_Tutorial_in_Python.ipynb
+++ b/examples/PENCIL_Tutorial_in_Python.ipynb
@@ -20,120 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\n",
-      "Obtaining file:///C:/Users/rentao/Desktop/PENCIL-main\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Requirement already satisfied: numpy in d:\\programs\\anaconda3\\lib\\site-packages (from pencil==0.1.0) (1.20.3)\n",
-      "Requirement already satisfied: torch in d:\\programs\\anaconda3\\lib\\site-packages (from pencil==0.1.0) (1.10.0+cu113)\n",
-      "Requirement already satisfied: pandas in d:\\programs\\anaconda3\\lib\\site-packages (from pencil==0.1.0) (1.3.4)\n",
-      "Requirement already satisfied: seaborn in d:\\programs\\anaconda3\\lib\\site-packages (from pencil==0.1.0) (0.11.2)\n",
-      "Requirement already satisfied: mlflow in d:\\programs\\anaconda3\\lib\\site-packages (from pencil==0.1.0) (1.23.1)\n",
-      "Requirement already satisfied: entrypoints in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (0.3)\n",
-      "Requirement already satisfied: alembic in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (1.4.1)\n",
-      "Requirement already satisfied: requests>=2.17.3 in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (2.26.0)\n",
-      "Requirement already satisfied: packaging in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (21.0)\n",
-      "Requirement already satisfied: scipy in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (1.7.1)\n",
-      "Requirement already satisfied: waitress in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (2.0.0)\n",
-      "Requirement already satisfied: prometheus-flask-exporter in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (0.18.6)\n",
-      "Requirement already satisfied: protobuf>=3.7.0 in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (3.19.1)\n",
-      "Requirement already satisfied: docker>=4.0.0 in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (5.0.3)\n",
-      "Requirement already satisfied: importlib-metadata!=4.7.0,>=3.7.0 in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (4.8.1)\n",
-      "Requirement already satisfied: sqlparse>=0.3.1 in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (0.4.2)\n",
-      "Requirement already satisfied: querystring-parser in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (1.2.4)\n",
-      "Requirement already satisfied: Flask in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (1.1.2)\n",
-      "Requirement already satisfied: click>=7.0 in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (8.0.3)\n",
-      "Requirement already satisfied: cloudpickle in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (2.0.0)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (6.0)\n",
-      "Requirement already satisfied: pytz in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (2021.3)\n",
-      "Requirement already satisfied: databricks-cli>=0.8.7 in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (0.16.2)\n",
-      "Requirement already satisfied: gitpython>=2.1.0 in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (3.1.24)\n",
-      "Requirement already satisfied: sqlalchemy in d:\\programs\\anaconda3\\lib\\site-packages (from mlflow->pencil==0.1.0) (1.4.22)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in d:\\programs\\anaconda3\\lib\\site-packages (from pandas->pencil==0.1.0) (2.8.2)\n",
-      "Requirement already satisfied: matplotlib>=2.2 in d:\\programs\\anaconda3\\lib\\site-packages (from seaborn->pencil==0.1.0) (3.4.3)\n",
-      "Requirement already satisfied: typing-extensions in d:\\programs\\anaconda3\\lib\\site-packages (from torch->pencil==0.1.0) (3.10.0.2)\n",
-      "Requirement already satisfied: colorama in d:\\programs\\anaconda3\\lib\\site-packages (from click>=7.0->mlflow->pencil==0.1.0) (0.4.4)\n",
-      "Requirement already satisfied: six>=1.10.0 in d:\\programs\\anaconda3\\lib\\site-packages (from databricks-cli>=0.8.7->mlflow->pencil==0.1.0) (1.16.0)\n",
-      "Requirement already satisfied: tabulate>=0.7.7 in d:\\programs\\anaconda3\\lib\\site-packages (from databricks-cli>=0.8.7->mlflow->pencil==0.1.0) (0.8.9)\n",
-      "Requirement already satisfied: pywin32==227 in d:\\programs\\anaconda3\\lib\\site-packages (from docker>=4.0.0->mlflow->pencil==0.1.0) (227)\n",
-      "Requirement already satisfied: websocket-client>=0.32.0 in d:\\programs\\anaconda3\\lib\\site-packages (from docker>=4.0.0->mlflow->pencil==0.1.0) (1.2.3)\n",
-      "Requirement already satisfied: gitdb<5,>=4.0.1 in d:\\programs\\anaconda3\\lib\\site-packages (from gitpython>=2.1.0->mlflow->pencil==0.1.0) (4.0.9)\n",
-      "Requirement already satisfied: zipp>=0.5 in d:\\programs\\anaconda3\\lib\\site-packages (from importlib-metadata!=4.7.0,>=3.7.0->mlflow->pencil==0.1.0) (3.6.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in d:\\programs\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn->pencil==0.1.0) (0.10.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in d:\\programs\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn->pencil==0.1.0) (3.0.4)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in d:\\programs\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn->pencil==0.1.0) (1.3.1)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in d:\\programs\\anaconda3\\lib\\site-packages (from matplotlib>=2.2->seaborn->pencil==0.1.0) (8.4.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in d:\\programs\\anaconda3\\lib\\site-packages (from requests>=2.17.3->mlflow->pencil==0.1.0) (3.2)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in d:\\programs\\anaconda3\\lib\\site-packages (from requests>=2.17.3->mlflow->pencil==0.1.0) (2.0.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in d:\\programs\\anaconda3\\lib\\site-packages (from requests>=2.17.3->mlflow->pencil==0.1.0) (1.26.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in d:\\programs\\anaconda3\\lib\\site-packages (from requests>=2.17.3->mlflow->pencil==0.1.0) (2021.10.8)\n",
-      "Requirement already satisfied: Mako in d:\\programs\\anaconda3\\lib\\site-packages (from alembic->mlflow->pencil==0.1.0) (1.1.6)\n",
-      "Requirement already satisfied: python-editor>=0.3 in d:\\programs\\anaconda3\\lib\\site-packages (from alembic->mlflow->pencil==0.1.0) (1.0.4)\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in d:\\programs\\anaconda3\\lib\\site-packages (from sqlalchemy->mlflow->pencil==0.1.0) (1.1.1)\n",
-      "Requirement already satisfied: Jinja2>=2.10.1 in d:\\programs\\anaconda3\\lib\\site-packages (from Flask->mlflow->pencil==0.1.0) (2.11.3)\n",
-      "Requirement already satisfied: Werkzeug>=0.15 in d:\\programs\\anaconda3\\lib\\site-packages (from Flask->mlflow->pencil==0.1.0) (2.0.2)\n",
-      "Requirement already satisfied: itsdangerous>=0.24 in d:\\programs\\anaconda3\\lib\\site-packages (from Flask->mlflow->pencil==0.1.0) (2.0.1)\n",
-      "Requirement already satisfied: prometheus-client in d:\\programs\\anaconda3\\lib\\site-packages (from prometheus-flask-exporter->mlflow->pencil==0.1.0) (0.11.0)\n",
-      "Requirement already satisfied: smmap<6,>=3.0.1 in d:\\programs\\anaconda3\\lib\\site-packages (from gitdb<5,>=4.0.1->gitpython>=2.1.0->mlflow->pencil==0.1.0) (5.0.0)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in d:\\programs\\anaconda3\\lib\\site-packages (from Jinja2>=2.10.1->Flask->mlflow->pencil==0.1.0) (1.1.1)\n",
-      "Installing collected packages: pencil\n",
-      "  Attempting uninstall: pencil\n",
-      "    Found existing installation: pencil 0.1.0\n",
-      "    Uninstalling pencil-0.1.0:\n",
-      "      Successfully uninstalled pencil-0.1.0\n",
-      "  Running setup.py develop for pencil\n",
-      "Successfully installed pencil-0.1.0\n",
-      "\n",
-      "[notice] A new release of pip available: 22.1.2 -> 22.2.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Looking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\n",
-      "Requirement already satisfied: scanpy in d:\\programs\\anaconda3\\lib\\site-packages (1.9.1)\n",
-      "Requirement already satisfied: scikit-learn>=0.22 in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (0.24.2)\n",
-      "Requirement already satisfied: session-info in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (1.0.0)\n",
-      "Requirement already satisfied: joblib in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (1.1.0)\n",
-      "Requirement already satisfied: statsmodels>=0.10.0rc2 in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (0.12.2)\n",
-      "Requirement already satisfied: matplotlib>=3.4 in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (3.4.3)\n",
-      "Requirement already satisfied: tqdm in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (4.62.3)\n",
-      "Requirement already satisfied: seaborn in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (0.11.2)\n",
-      "Requirement already satisfied: h5py>=3 in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (3.2.1)\n",
-      "Requirement already satisfied: networkx>=2.3 in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (2.6.3)\n",
-      "Requirement already satisfied: numba>=0.41.0 in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (0.54.1)\n",
-      "Requirement already satisfied: natsort in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (8.1.0)\n",
-      "Requirement already satisfied: umap-learn>=0.3.10 in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (0.5.2)\n",
-      "Requirement already satisfied: packaging in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (21.0)\n",
-      "Requirement already satisfied: pandas>=1.0 in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (1.3.4)\n",
-      "Requirement already satisfied: anndata>=0.7.4 in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (0.8.0)\n",
-      "Requirement already satisfied: numpy>=1.17.0 in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (1.20.3)\n",
-      "Requirement already satisfied: scipy>=1.4 in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (1.7.1)\n",
-      "Requirement already satisfied: patsy in d:\\programs\\anaconda3\\lib\\site-packages (from scanpy) (0.5.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in d:\\programs\\anaconda3\\lib\\site-packages (from matplotlib>=3.4->scanpy) (0.10.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in d:\\programs\\anaconda3\\lib\\site-packages (from matplotlib>=3.4->scanpy) (2.8.2)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in d:\\programs\\anaconda3\\lib\\site-packages (from matplotlib>=3.4->scanpy) (3.0.4)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in d:\\programs\\anaconda3\\lib\\site-packages (from matplotlib>=3.4->scanpy) (8.4.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in d:\\programs\\anaconda3\\lib\\site-packages (from matplotlib>=3.4->scanpy) (1.3.1)\n",
-      "Requirement already satisfied: llvmlite<0.38,>=0.37.0rc1 in d:\\programs\\anaconda3\\lib\\site-packages (from numba>=0.41.0->scanpy) (0.37.0)\n",
-      "Requirement already satisfied: setuptools in d:\\programs\\anaconda3\\lib\\site-packages (from numba>=0.41.0->scanpy) (58.0.4)\n",
-      "Requirement already satisfied: pytz>=2017.3 in d:\\programs\\anaconda3\\lib\\site-packages (from pandas>=1.0->scanpy) (2021.3)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in d:\\programs\\anaconda3\\lib\\site-packages (from scikit-learn>=0.22->scanpy) (2.2.0)\n",
-      "Requirement already satisfied: six in d:\\programs\\anaconda3\\lib\\site-packages (from patsy->scanpy) (1.16.0)\n",
-      "Requirement already satisfied: pynndescent>=0.5 in d:\\programs\\anaconda3\\lib\\site-packages (from umap-learn>=0.3.10->scanpy) (0.5.5)\n",
-      "Requirement already satisfied: stdlib-list in d:\\programs\\anaconda3\\lib\\site-packages (from session-info->scanpy) (0.8.0)\n",
-      "Requirement already satisfied: colorama in d:\\programs\\anaconda3\\lib\\site-packages (from tqdm->scanpy) (0.4.4)\n",
-      "\n",
-      "[notice] A new release of pip available: 22.1.2 -> 22.2.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install -e ..\n",
     "%pip install scanpy"
@@ -215,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we can visualize the condition labels on the UMAP from top 2000 most variable genes (MVG2000), "
+    "Visualize the condition labels on the UMAP from top 2000 most variable genes (MVG2000), "
    ]
   },
   {
@@ -247,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The cell labels of the simulated data were actually generated based on the expression level clustering of MVG1000-1300 (ground truth genes, GT genes). Clusters 0, 2, and 9 are used as ground truth groups (GT groups). "
+    "The cell labels of the simulated data were actually generated based on the expression level clustering of MVG1000-1300 (ground truth genes, GT genes). Clusters 0, 2, and 9 are used as ground truth groups (GT groups), and in each ground truth group, 90% of the cells are set to be in the same class, and the remaining 10% are randomly assigned other class labels to simulate phenotype enriched subpopulations. The other cells are randomly assigned a class label as background interference."
    ]
   },
   {
@@ -305,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prepare the source data for `pencil`."
+    "Prepare the source data for `pencil`. PENCIL takes as input a matrix of expression data from MVG2000 (or more genes) and cell labels in an attempt to simultaneously localize GT genes and the cell subpopulations from which they arise."
    ]
   },
   {
@@ -341,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run `pencil` with mlflow recording, "
+    "Run `pencil` with mlflow recording, and show the results directly by passing parameter `emd`. We present the results on the UMAP generated from GT genes to facilitate comparison with the GT group."
    ]
   },
   {
@@ -501,6 +390,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The labels predicted by PENCIL are almost identical to the ground truth! Moreover, by visualizing the gene weights learned by PENCIL, we can see that the selected genes are indeed also mostly located in the range of mvg1000-1300 (GT genes). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the run is complete, execute `mlflow ui` in the terminal to view the results of each experiment and compare them conveniently. <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Show results with scanpy"
    ]
   },
@@ -551,7 +454,9 @@
    "source": [
     "### Apply PENCIL's regression mode\n",
     "\n",
-    "#### Load data to scanpy"
+    "#### Load data to scanpy\n",
+    "\n",
+    "The features of the second example are 10 principle components (PCs)."
    ]
   },
   {
@@ -584,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualize the timepoints labels on the UMAP from top 10 PCs, "
+    "Visualize the timepoints labels on the UMAP from top 10 PCs."
    ]
   },
   {
@@ -613,7 +518,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualize the ground truth setting, "
+    "Visualize the ground truth setting. The simulated timepoint labels are still obtained from the clustering results, but since the input is 10-PCs-matrix, we do not set the ground truth feature like the first example. Theoretically, we can also perform simultaneous feature selection in regression mode (more related results can be found in our paper).\n",
+    "\n",
+    "The clusters 3, 1, 2, 11, 4 are set to the ground truth groups (GT groups). For cells in GT groups 1, 3, and 5, we assign timepoints 1, 2, 3, respectively. For cells in GT groups 2, 4, we assign the time points of the pre- and post-groups in a 1:1 ratio to simulate transition states. The other cells are still randomly assigned a timepoint label as background noise."
    ]
   },
   {
@@ -655,7 +562,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Excute PENCIL"
+    "#### Excute PENCIL\n",
+    "Extract the PCs-matrix and timepoints labels for PENCIL."
    ]
   },
   {
@@ -681,6 +589,13 @@
     "print(data.shape)\n",
     "print(labels)\n",
     "print(emd.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run `pencil`."
    ]
   },
   {
@@ -864,7 +779,7 @@
     "data_name = 'DAseq_tutorial_sim'\n",
     "expr_id = '0.0.1'\n",
     "mode = 'regression'\n",
-    "pencil = Pencil(mode, select_genes=True, seed=1234, data_name=data_name, expr_id=expr_id, mlflow_record=True, dropouts=[0.0, 0.0])\n",
+    "pencil = Pencil(mode, select_genes=True, seed=1234, data_name=data_name, expr_id=expr_id, mlflow_record=True, dropouts=[0.0, 0.0]) #`select_genes` can also be set to False, if True, pencil will output a weight vector for all 10 PCs. \n",
     "with mlflow.start_run():\n",
     "    pred, confidence = pencil.fit_transform(\n",
     "        data, labels, \n",
@@ -877,9 +792,14 @@
     "        class_weights=None,\n",
     "        emd=emd,\n",
     "        plot_show=True\n",
-    "        )\n",
-    "    w = pencil.gene_weights(plot=True)\n",
-    "    plt.close()"
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The distribution of the continuous time scores predicted by PENCIL match well with the ground truth and successfully identify the transition states. "
    ]
   },
   {
@@ -887,6 +807,13 @@
    "metadata": {},
    "source": [
     "#### Show results with scanpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding the pencil’s results into the anndata object to visualize."
    ]
   },
   {
