--- a/examples/PENCIL_Tutorial_in_Python.ipynb
+++ b/examples/PENCIL_Tutorial_in_Python.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,8 +93,8 @@
     }
    ],
    "source": [
-    "adata = sc.read_h5ad('./data/Feldman_T_cell_data_simulation.h5ad')\n",
-    "mvg2000 = pd.read_csv('./data/Feldman_T_cell_data_simulation_mvg2000_list.csv')\n",
+    "adata = sc.read_h5ad('./data/PENCIL_tutorial_1.h5ad')\n",
+    "mvg2000 = pd.read_csv('./data/PENCIL_tutorial_1_mvg2000_list.csv')\n",
     "mvg2000 = mvg2000['x']\n",
     "adata = adata[:, mvg2000]\n",
     "print(adata)"
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -235,15 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment 'Feldman_T_sim' already exists.\n",
-      "dataset: Feldman_T_sim, expr_id: 0.0.1\n",
+      "dataset: PENCIL_tutorial_1, expr_id: 0.0.1\n",
       "scheme: ce, Sigmoid\n",
       "searching c...\n",
       "cmin:0.000, cmax:2.000, c:1.000, rejected 0 cells.\n",
@@ -299,7 +298,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---train time: 9.40053391456604 seconds ---\n",
+      "---train time: 10.0130615234375 seconds ---\n",
       "\n",
       "Number of examples rejected= 4363 / 6350\n",
       "num_of_rejcted\n",
@@ -347,7 +346,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---test time: 1.54770827293396 seconds ---\n"
+      "---test time: 1.9668633937835693 seconds ---\n"
      ]
     },
     {
@@ -364,9 +363,8 @@
     }
    ],
    "source": [
-    "data_name = 'Feldman_T_sim'\n",
+    "data_name = 'PENCIL_tutorial_1'\n",
     "expr_id = '0.0.1'\n",
-    "\n",
     "mode = 'multi-classification'\n",
     "pencil = Pencil(mode, select_genes=True, seed=1234, data_name=data_name, expr_id=expr_id, mlflow_record=True)\n",
     "with mlflow.start_run():\n",
@@ -409,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -478,8 +476,8 @@
     }
    ],
    "source": [
-    "adata_2 = sc.read_h5ad('./data/DAseq_tutorial_data_simulation.h5ad')\n",
-    "pcs_list = pd.read_csv('./data/DAseq_tutorial_data_simulation_pcs_list.csv')\n",
+    "adata_2 = sc.read_h5ad('./data/PENCIL_tutorial_2.h5ad')\n",
+    "pcs_list = pd.read_csv('./data/PENCIL_tutorial_2_pcs_list.csv')\n",
     "pcs_list = pcs_list['x']\n",
     "adata_2 = adata_2[:, pcs_list]\n",
     "print(adata_2)"
@@ -494,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -600,15 +598,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment 'DAseq_tutorial_sim' already exists.\n",
-      "dataset: DAseq_tutorial_sim, expr_id: 0.0.1\n",
+      "Experiment 'PENCIL_tutorial_2' already exists.\n",
+      "dataset: PENCIL_tutorial_2, expr_id: 0.0.1\n",
       "scheme: sml1, NGLR\n",
       "searching c...\n",
       "cmin:0.000, cmax:2.000, c:1.000, rejected 0 cells.\n",
@@ -738,7 +736,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---train time: 22.942065715789795 seconds ---\n",
+      "---train time: 24.65443253517151 seconds ---\n",
       "\n",
       "Number of examples rejected= 10214 / 16291\n"
      ]
@@ -759,12 +757,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---test time: 4.245014905929565 seconds ---\n"
+      "---test time: 3.940436601638794 seconds ---\n"
      ]
     }
    ],
    "source": [
-    "data_name = 'DAseq_tutorial_sim'\n",
+    "data_name = 'PENCIL_tutorial_2'\n",
     "expr_id = '0.0.1'\n",
     "mode = 'regression'\n",
     "pencil = Pencil(mode, select_genes=True, seed=1234, data_name=data_name, expr_id=expr_id, mlflow_record=True, dropouts=[0.0, 0.0]) #`select_genes` can also be set to False, if True, pencil will output a weight vector for all 10 PCs. \n",
@@ -806,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
