Update python tutorial

--- a/examples/PENCIL_Tutorial_in_Python.ipynb
+++ b/examples/PENCIL_Tutorial_in_Python.ipynb
@@ -59,7 +59,7 @@
     "## PENCIL examples\n",
     "For convenience, we convert seurat objects to '.h5ad' files and then load them into scanpy/anndata objects. The data download and conversion steps are included in the r script `data_download.R`, so if you have not downloaded the data yet, run the change script in R.\n",
     "```\n",
-    "source('data_download.R') #R\n",
+    "source('data_download.R') #R (version>=4.1.0)\n",
     "```"
    ]
   },
