update tutorials in R&python

--- a/examples/PENCIL_Tutorial_in_Python.ipynb
+++ b/examples/PENCIL_Tutorial_in_Python.ipynb
@@ -849,7 +849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Referrence\n",
+    "## Reference\n",
     "Supervised learning of high-confidence phenotypic subpopulations from single-cell data (2022).\n",
     "\n",
     "Tao Ren, Ling-Yun Wu and Zheng Xia"
