--- a/examples/PENCIL_Tutorial_in_R.Rmd
+++ b/examples/PENCIL_Tutorial_in_R.Rmd
@@ -115,7 +115,7 @@ with mlflow.start_run():
 ```
 After the run is complete, we can execute `mlflow ui` in the terminal to view the results of each experiment and compare them conveniently.
 
-### Evaluating results
+### Evaluate results
 
 The results can be shown in Python directly by passing parameter `emd` into `pencil.fit_transform`.
 ```
@@ -207,7 +207,7 @@ pred, confidence = pencil.fit_transform(
 ```
 
 
-### Evaluating results
+### Evaluate results
 Adding the pencil's results into the seurat object to visualize.
 ```{r fig.align="center", fig.width = 5.5, fig.height= 3.8, warning=FALSE, message=FALSE}
 pred.time <- as.vector(py$pred)
@@ -222,7 +222,24 @@ ggplot(sc_data.2[, sc_data.2$confidence.score > 0]@meta.data, aes(pred.time, fil
 geom_histogram(aes(y=..density..), bins = 500, show.legend = T) + geom_density(alpha=0.2) + scale_x_continuous(breaks = seq(1, 3, 0.5))
 ```
 
-# Referrence
+
+# Reference
 Supervised learning of high-confidence phenotypic subpopulations from single-cell data (2022).
 
 Tao Ren, Ling-Yun Wu and Zheng Xia
+
+# Package versions
+R packages loaded in this tutorial: <br>
+Seurat	4.0.5 <br>
+reticulate	1.25 <br>
+scater	1.22.0 <br>
+ggplot2	3.3.5 <br>
+
+Python packages that `pencil` depends on: <br>
+numpy	1.20.3 <br>
+pandas	1.3.4 <br>
+torch	1.10.0 <br>
+seaborn	0.11.2 <br>
+umap-learn	0.5.2 <br>
+mlflow	1.23.1 <br>
+
