--- a/examples/PENCIL_Tutorial_in_Python.ipynb
+++ b/examples/PENCIL_Tutorial_in_Python.ipynb
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Excute PENCIL"
+    "#### Execute PENCIL"
    ]
   },
   {
@@ -560,7 +560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Excute PENCIL\n",
+    "#### Execute PENCIL\n",
     "Extract the PCs-matrix and timepoints labels for PENCIL."
    ]
   },
